# taskinder

./: .gitignore  Makefile  README.md  pyproject.toml
src/taskinder/: __main__.py  cli.py  core.py  ui.py
src/taskinder/models/: task.py
src/taskinder/scanner/: __init__.py  todo_scanner.py
src/taskinder/storage/: json_storage.py  task_repository.py
src/taskinder/tui/: __init__.py  app.py
src/taskinder/tui/screens/: __init__.py  edit_screen.py  main_screen.py  theme_screen.py  todo_screen.py
src/taskinder/tui/themes/: __init__.py  manager.py
src/taskinder/tui/themes/defaults/: __init__.py  catppuccin.py  dracula.py  gruvbox.py  nord.py  tokyo_night.py
src/taskinder/tui/widgets/: __init__.py  task_item.py
