[project]
name = "taskinder"
dynamic = ["version"]
dependencies = [
    "platformdirs>=4.0.0",
    "ruff>=0.12.0"
]

[tool.setuptools.dynamic]
version = {attr = "taskinder.__version__"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
