[project]
name = "taskinder"
dynamic = ["version"]
description = "A per-directory TUI task manager"
dependencies = [
    "platformdirs>=4.0.0",
    "textual>=0.85.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
    "textual-dev>=0.85.0",
]

[project.scripts]
taskinder = "taskinder.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "taskinder.__version__"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
